--- a/client/src/App.css
+++ b/client/src/App.css
@@ -5,14 +5,14 @@
   align-items: center;
   justify-content: center;
   margin-left: none;
-background-color: aqua;
+  background-image:  linear-gradient(79deg,#bdb8c5,#5ad489 48%,#f1f1f1)
 
 }
 .Home {
   background-color: #c25a5a; /*example background color*/
 }
 
-.auth-form-container, .Login-form,.register-form{
+.auth-form-container, .Login-form,.signup-form{
   display: flex;
   flex-direction: column;
   align-items: left;
