--- a/client/src/App.css
+++ b/client/src/App.css
@@ -39,7 +39,7 @@ margin-left: 0.5cm;
   text-align: left;
   font-size: x-large;
   padding: 0.2rem 0;
-  border: #bdb8c5;
+ 
 }
 input{
   margin: 0.5rem 0;
@@ -113,4 +113,45 @@ button[type="submit"] {
 
 .link-btn {
   margin-top: 1.5cm;
+}
+
+.image-container {
+  flex-basis: 100%;
+  width: 100%;
+  margin-left: 4cm;
+
+}
+.signupimage{
+  mix-blend-mode: color-burn;
+}
+
+.image-container {
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  width: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 4cm;
+  margin-left: 3cm;
+  background-color: transparent;
+}
+
+.image-container img {
+  max-width: 100%;
+  height: auto;
+}
+
+.product-list {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: left;
+}
+
+.product {
+  margin: 10px;
+  text-align: left;
+  max-width: 200px;
 }
