--- a/client/src/App.css
+++ b/client/src/App.css
@@ -155,3 +155,14 @@ button[type="submit"] {
   text-align: left;
   max-width: 200px;
 }
+
+
+.social-media-links{
+  width: 100px;
+}
+
+
+.social-media-space {
+  display: inline-block;
+  width: 10px;
+}
