--- a/client/src/App.css
+++ b/client/src/App.css
@@ -158,11 +158,57 @@ button[type="submit"] {
 
 
 .social-media-links{
-  width: 100px;
+  display: flex;
+  justify-content: center;
 }
 
 
 .social-media-space {
   display: inline-block;
-  width: 10px;
+  width: 40px;
+}
+
+
+.about-container {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.about-text {
+  flex: 1;
+}
+
+.about-image {
+  flex: 1;
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+}
+
+.about-image img {
+  max-width: 100%;
+  height: auto;
+}
+
+
+.form-group {
+  margin-bottom: 20px;
+}
+
+.form-control {
+  border: none;
+  border-radius: 0;
+  border-bottom: 1px solid #ccc;
+  box-shadow: none;
+}
+
+.form-control:focus {
+  border-color: #007bff;
+  box-shadow: none;
+}
+
+.btn-primary {
+  background-color: #007bff;
+  border: none;
+  border-radius: 0;
 }
