--- a/client/src/App.css
+++ b/client/src/App.css
@@ -38,14 +38,14 @@ margin-left: 0.5cm;
   color: #03186c;
   text-align: left;
   font-size: x-large;
-  padding: 0.1rem 0;
+  padding: 0.2rem 0;
  
 }
 input{
-  margin: 0.2rem 0;
-  padding:  0.2rem;
+  margin: 0.5rem 0;
+  padding:  1rem;
   border: none;
-  border-radius: 2px;
+  border-radius: 5px;
   align-items: center;
 
   
@@ -78,9 +78,6 @@ text-align: left;
   display: flex;
   flex-direction: column;
   align-items: center;
-  
- 
-  
 }
 
 
@@ -147,17 +144,6 @@ button[type="submit"] {
   height: auto;
 }
 
-.product-list {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: left;
-}
-
-.product {
-  margin: 10px;
-  text-align: left;
-  max-width: 200px;
-}
 
 
 .social-media-links{
@@ -179,6 +165,7 @@ button[type="submit"] {
 
 .about-text {
   flex: 1;
+  margin-left: 1cm;
 }
 
 .about-image {
@@ -217,14 +204,79 @@ button[type="submit"] {
 }
 form {
   border: 1px solid #ccc;
-  padding: 50px;
+  padding: 20px;
   border-radius: 5px;
   box-shadow: 0 0 5px rgba(0,0,0,.3);
 }
 
 img {
-  margin-top: 20px;
+  margin-top: 30px;
   max-width: 200%;
   
 
+}
+
+
+.flea-market {
+  max-width: 960px;
+  margin: 0 auto;
+  font-family: Arial, sans-serif;
+  color: #000000;
+}
+
+header {
+  background-color: #fefefe;
+  padding: 20px;
+}
+
+h1 {
+  margin: 0;
+  font-size: 36px;
+  text-align: center;
+}
+
+.product-list {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  margin: 30px 0;
+}
+
+.product {
+  width: 200px;
+  margin: 20px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  padding: 20px;
+  text-align: center;
+}
+
+.product img {
+  width: 50%;
+  height: auto;
+  margin-bottom: 10px;
+}
+
+.product h2 {
+  font-size: 24px;
+  margin: 0;
+}
+
+.product p {
+  font-size: 18px;
+  margin: 10px 0;
+}
+
+button {
+  background-color: #f0a500;
+  color: #fff;
+  border: none;
+  border-radius: 5px;
+  padding: 10px 20px;
+  cursor: pointer;
+  transition: background-color 0.2s ease;
+}
+
+button:hover {
+  background-color: #e09500;
 }
